# simoa-tb

./: .gitignore  LICENSE  README.md  pyproject.toml
input/alere/: Table10.csv  Table11.csv  Table12.csv  Table2.csv  Table3.csv  Table4.csv  Table5.csv  Table6.csv  Table7.csv  Table8.csv  Table9.csv
input/simoa/: 04032024 Run10 Neon.csv
output/: clinical_combined.xlsx  correlations.xlsx  sens_spec_table.xlsx  table_1.xlsx  test_set_predictions.xlsx
processed/: X.csv  X_all.csv  X_med.csv  X_rep.csv  barcodes.csv  mbv.csv  ncv_tvt.pkl  train_on_mbv.pkl  train_on_mbv_params.json  y.csv
src/: 01_calibration.ipynb  02_clinical_unblinded.ipynb  03_ml.ipynb  04_clinical_combined.ipynb  assay-validation.ipynb  config.py  scratch.py  utils.py
