[project]
name = "simoa-tb"
description = "Code and raw data for a multiplexed single-molecule array urine test for TB"
readme = "README.md"
authors = [{name = "Tyler J. Dougan"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = "MIT for code; CC-BY-4.0 for data and outputs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.3.0",
    "pandas>=2.3.0",
    "pygam>=0.9.1",
    "scikit-learn<1.6",
    "seaborn>=0.13.2",
    "waltlabtools>=1.0.0b28",
    "xlsxwriter>=3.2.3",
]

[project.urls]
source = "https://github.com/tylerdougan/simoa-tb"
documentation = "https://doi.org/10.1101/2025.06.10.25329330"